[gd_scene load_steps=3 format=3 uid="uid://ckhhq04f020sn"]

[ext_resource type="Script" uid="uid://bpmh5rnnx43mb" path="res://UI/game_over.gd" id="1_3y5qq"]
[ext_resource type="FontFile" uid="uid://6wtxqi1tje8" path="res://assets/Fonts/Dead Revolver Typeface/Dead Revolver Typeface/Fonts/Game/OTF/DeadRevolverGame.otf" id="2_3y5qq"]

[node name="Game Over" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_3y5qq")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1

[node name="GameTitleContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GameTitleDrop" type="Label" parent="Panel/VBoxContainer/GameTitleContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(170, 100)
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0.862745, 1, 1)
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = ExtResource("2_3y5qq")
theme_override_font_sizes/font_size = 60
text = "game"
horizontal_alignment = 2
vertical_alignment = 1

[node name="GameTitleLoop" type="Label" parent="Panel/VBoxContainer/GameTitleContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(170, 100)
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0, 0.862745, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0.792157, 1)
theme_override_constants/shadow_offset_y = 4
theme_override_fonts/font = ExtResource("2_3y5qq")
theme_override_font_sizes/font_size = 60
text = "over"
vertical_alignment = 1

[node name="ScoreContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="YourScore" type="Label" parent="Panel/VBoxContainer/ScoreContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "YOUR SCORE : "
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerScoreText" type="Label" parent="Panel/VBoxContainer/ScoreContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NavigationContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 50
alignment = 1

[node name="RestartButton" type="Button" parent="Panel/VBoxContainer/NavigationContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "RESTART"

[node name="MainMenuButton" type="Button" parent="Panel/VBoxContainer/NavigationContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "MAIN MENU"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="focus_entered" from="Panel/VBoxContainer/NavigationContainer/RestartButton" to="." method="_on_entered"]
[connection signal="mouse_entered" from="Panel/VBoxContainer/NavigationContainer/RestartButton" to="." method="_on_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/NavigationContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="focus_entered" from="Panel/VBoxContainer/NavigationContainer/MainMenuButton" to="." method="_on_entered"]
[connection signal="mouse_entered" from="Panel/VBoxContainer/NavigationContainer/MainMenuButton" to="." method="_on_entered"]
[connection signal="pressed" from="Panel/VBoxContainer/NavigationContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
